--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
+    "@quasar/vite-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^6.11.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
@@ -20,8 +21,13 @@
     "eslint-plugin-prettier": "^5.0.1",
     "nuxt": "^3.8.1",
     "prettier": "^3.1.0",
+    "sass": "^1.33.0",
     "typescript": "^5.2.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@quasar/extras": "^1.16.8",
+    "quasar": "^2.14.0"
   }
 }
