--- a/package.json
+++ b/package.json
@@ -7,21 +7,34 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@quasar/vite-plugin": "^1.6.0",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/addon-links": "7.5.3",
+    "@storybook/blocks": "7.5.3",
+    "@storybook/testing-library": "0.2.2",
+    "@storybook/vue3": "7.5.3",
+    "@storybook/vue3-vite": "7.5.3",
     "@typescript-eslint/parser": "^6.11.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
     "nuxt": "^3.8.1",
     "prettier": "^3.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sass": "^1.33.0",
+    "storybook": "7.5.3",
     "typescript": "^5.2.2",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
