--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.8",
+    "pinia": "^2.1.7",
     "quasar": "^2.14.0"
   }
 }
